--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,9 @@
     <include src="./partials/customer-reviews.html"></include>
     <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/modal-buynow.html"></include>
+    <include src="./partials/modal-ourlocation.html"></include>
+    <include src="./partials/modal-franchise.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script
       defer
@@ -35,6 +38,9 @@
       crossorigin="anonymous"
     ></script>
     <script defer src="js/mobile-menu.js"></script>
+    <script defer src="js/modal-buynow.js"></script>
+    <script defer src="js/modal-franchise.js"></script>
+    <script defer src="js/modal-ourlocation.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
